--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "Yecid\\RepoCalcu\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Yecid Rodriguez",
@@ -15,6 +20,7 @@
         }
     ],
     "minimum-stability": "RC",
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^9.6"
+    }
 }
-
