--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,15 @@
     ],
     "minimum-stability": "RC",
     "require-dev": {
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^9.6",
+        "squizlabs/php_codesniffer": "^3.11"
+    },
+    "scripts": {
+        "phpcs-check": "phpcs --colors -s",
+        "phpcs-fix": "phpcbf --colors -s",
+        "phpcs-auto-check": "@phpcs-check --standard=.phpcs.xml",
+        "phpcs-auto-fix": "@phpcs-fix --standard=.phpcs.xml",
+        "phpcs-auto-check-summary": "phpcs --report=summary -p",
+        "phpcs-auto-fix-summary": "phpcbf --report=summary -p"
     }
 }
